repos/test-emily-game/contents/sample/test/macro/fail/checkBlank.em
# // operator failure case: Nothing to left
# Expect failure

println ( // 4 )
